# tasklight

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  rthook_qt.py  tasklight.spec  tasklight.yaml
.github/workflows/: build.yml
hooks/: claude.settings.json  codex.hooks.json  opencode-tasklight.js  tasklight-claude-hook.sh  tasklight_hook.py
spec/: DESIGN.md  TOKENRATE.md  version_info.txt
tasklight/: __main__.py  app.py  config.py  dialogs.py  model.py  server.py  tray.py
tasklight/overlay/: __init__.py  layout.py  presentation.py  sparkline.py  types.py  view_model.py  widget.py
tests/: manual.sh  manual_sparklines.sh  test_sparkline.py
