[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasklight"
version = "0.1.1"
description = "Simple desktop widget that monitors active agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.11.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
tasklight = "tasklight.app:cli"

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.20.0",
]
