[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasklight"
version = "0.1.1"
description = "Simple desktop widget that monitors active agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.11.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
tasklight = "tasklight.app:cli"

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.20.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tasklight"]
